# torchsparsegradutils

./: .clang-format  .clang-tidy  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile.pip-install  JOSS_REVIEWER_RESPONSE.md  MANIFEST.in  PERF_PLAN.md  PR_DESCRIPTION.md  README.md  RELEASE_NOTES_0.2.2.md  kernel_best_practices.md  pyproject.toml  pyrefly_baseline.json  pytest.ini  requirements-ci.txt  requirements-dev.txt  setup.py  tox.ini
.codex/skills/torchsparsegradutils-release/: SKILL.md
.devcontainer/: Dockerfile  Dockerfile.nightly  Dockerfile.stable  devcontainer.json  environment.yml  requirements.txt
.devcontainer/.devcontainer/: Dockerfile  devcontainer.json  environment.yml
.github/workflows/: black.yml  deployment-pypi.yml  docs.yml  python-package.yml
benchmarks/: __init__.py  bench_coo2csr.py  bench_e2e_cg.py  bench_e2e_rsample.py  bench_grouped_gemm.py  bench_sddmm.py  bench_seglse.py  bench_seglse_bidir.py  bench_spmm.py  bench_spsm.py  corpus.py  env.py  harness.py  memory.py  results.py  run.py  viz.py
benchmarks/results/colab-t4/: coo2csr_B16_i32_nse100000.json  coo2csr_B16_i32_nse1000000.json  coo2csr_B16_i32_nse5000000.json  coo2csr_B16_i64_nse100000.json  coo2csr_B16_i64_nse1000000.json  coo2csr_B16_i64_nse5000000.json  coo2csr_B1_i32_nse100000.json  coo2csr_B1_i32_nse1000000.json  coo2csr_B1_i32_nse5000000.json  coo2csr_B1_i64_nse100000.json  coo2csr_B1_i64_nse1000000.json  coo2csr_B1_i64_nse5000000.json  e2e_cg_n4096_p1.json  e2e_cg_n4096_p8.json  e2e_rsample_coo_encoder-2x32^3.json  e2e_rsample_coo_encoder-2x48^3.json  e2e_rsample_coo_encoder-2x64^3.json  e2e_rsample_csr_encoder-2x32^3.json  e2e_rsample_csr_encoder-2x48^3.json  (+16 more)
cuda/: build.toml  flake.nix
cuda/bench/: CMakeLists.txt  bench_coo2csr.cu  bench_grouped_gemm.cu  bench_sddmm.cu  bench_seglse.cu  bench_seglse_bidir.cu  bench_smoke.cu  bench_spmm.cu  bench_spsm.cu
cuda/csrc/: registration.cpp
docs/: Makefile  README.md  make.bat  requirements.txt
docs/source/: benchmarks.rst  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  mathematical_background.rst  naming.rst  quickstart.rst
paper/: guidlines.md  paper.bib  paper.md
paper/jats/: paper.jats
spec/: architecture.md  benchmarks.md  build.md  commit.md  goal.md  index.md  kernels.md  map.md  naming.md  testing.md
spec/images/: make_dummy_charts.py  make_real_charts.py
tests/: _sddmm_helpers.py  _spmm_helpers.py  _spsm_helpers.py  _tolerances.py  conftest.py  gpu_gates.py  spd_forward_solve_notebook.ipynb  test_batched.py  test_benchmarks_smoke.py  test_bicgstab.py  test_cupy_bindings.py  test_distributions.py  test_doctests.py  test_e2e_memory_regression.py  test_encoders.py  test_gate1_smoke.py  test_gate2_opcheck_coo2csr.py  test_gate2_opcheck_grouped_gemm.py  test_gate2_opcheck_sddmm.py  test_gate2_opcheck_seglse.py  test_gate2_opcheck_seglse_bidir.py  test_gate2_opcheck_spmm.py  test_gate2_opcheck_spsm.py  test_gate3_parity.py  test_gate3_parity_coo2csr.py  test_gate3_parity_grouped_gemm.py  test_gate3_parity_sddmm.py  test_gate3_parity_spmm.py  test_gate3_parity_spsm.py  test_gate4_gradcheck_grouped_gemm.py  test_gate4_gradcheck_sddmm.py  test_gate4_gradcheck_spmm.py  test_gate4_gradcheck_spsm.py  test_gate5_determinism_coo2csr.py  test_gate5_determinism_grouped_gemm.py  test_gate5_determinism_sddmm.py  test_gate5_determinism_spmm.py  test_gate5_determinism_spsm.py  test_gate6_contract_coo2csr.py  test_gate6_contract_grouped_gemm.py  (+22 more)
tests/oracle/: __init__.py  _helpers.py  indexed_matmul.py  sparse_logsumexp.py  sparse_lstsq.py  sparse_matmul.py  sparse_solve.py
tests/test_params/: czyx_shifts.yaml  pariwise_coo_indices.json  xyz_coords.yaml  xyz_neighbours.json
torchsparsegradutils/: __init__.py  _batched.py  _dispatch.py  indexed_matmul.py  sparse_logsumexp.py  sparse_lstsq.py  sparse_matmul.py  sparse_solve.py
torchsparsegradutils/benchmarks/: __init__.py  batched_sparse_mm_rand.py  benchmark_suite.py  benchmark_utils.py  profile_sparse_ops.py  sparse_bidir_logsumexp_rand.py  sparse_bidir_logsumexp_suitesparse.py  sparse_generic_solve_rand.py  sparse_generic_solve_suite.py  sparse_generic_solve_suite_results.md  sparse_logsumexp_rand.py  sparse_logsumexp_suitesparse.py  sparse_mm_rand.py  sparse_mm_rand_results.md  sparse_mm_suite.py  sparse_mm_suite_results.md  sparse_triangular_solve_rand.py  sparse_triangular_solve_suitesparse.py  spd_forward_solve_notebook.ipynb  visualize_benchmark_results.py
torchsparsegradutils/cupy/: __init__.py  cupy_bindings.py  cupy_sparse_solve.py
torchsparsegradutils/distributions/: __init__.py  constraints.py  sparse_multivariate_normal.py
torchsparsegradutils/encoders/: __init__.py  pairwise_encoder.py  pairwise_voxel_encoder.py
torchsparsegradutils/jax/: __init__.py  jax_bindings.py  jax_sparse_solve.py
torchsparsegradutils/ops/: __init__.py  generic_solve.py  indexed_matmul.py  logsumexp.py  lstsq.py  matmul.py  triangular_solve.py
torchsparsegradutils/solvers/: __init__.py  _matvec.py  bicgstab.py  cg.py  lsmr.py  minres.py
torchsparsegradutils/tests/: benchmark_batched_sparse_mm.py  benchmark_results_batched_mm.md  benchmark_results_sparse_mm.md  benchmark_sparse_mm.py  conftest.py  dist_stats_helpers.py  profile_sparse_ops.py  test_bicgstab.py  test_config.py  test_cupy_bindings.py  test_cupy_sparse_solve.py  test_dist_stats_helpers.py  test_distributions.py  test_doctests.py  test_encoders.py  test_indexed_matmul.py  test_integration_pairwise_sparse_mvn.py  test_jax_bindings.py  test_jax_sparse_solve.py  test_linear_cg.py  test_lsmr.py  test_minres.py  test_quickstart_guide.py  test_random.py  test_sparse_bidir_logsumexp.py  test_sparse_logsumexp.py  test_sparse_lstsq.py  test_sparse_matmul.py  test_sparse_solve.py  test_sparse_triangular_solve.py  test_utils.py
torchsparsegradutils/utils/: BiCGSTAB.py  __init__.py  _block_diag.py  bicgstab.py  convert.py  dist_stats_helpers.py  linear_cg.py  lsmr.py  minres.py  random_sparse.py  utils.py
torchsparseutils/: __init__.py  sparse_matmul.py  sparse_solve.py
(+39 files in other folders)
