[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchsparsegradutils"
version = "0.2.3"
description = "A collection of utility functions to work with PyTorch sparse tensors"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "CAI4CAI research group", email = "contact@cai4cai.uk"}
]
keywords = ["sparse", "torch", "utility"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "torch>=2.5",
    "scipy",
    "packaging",
]

[project.urls]
Homepage = "https://github.com/cai4cai/torchsparsegradutils"
Documentation = "https://torchsparsegradutils.readthedocs.io"
Repository = "https://github.com/cai4cai/torchsparsegradutils"
Issues = "https://github.com/cai4cai/torchsparsegradutils/issues"
Changelog = "https://github.com/cai4cai/torchsparsegradutils/releases"

[dependency-groups]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-copybutton>=0.5.0",
    "myst-parser>=2.0.0",
    "sphinx-autobuild>=2021.3.14",
    "matplotlib>=3.5.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "sphinxcontrib-bibtex>=2.5.0",
    "sphinx-gallery>=0.13.0",
]
dev = [
    "pytest==9.0.3",
    "pytest-cov",
    "pytest-rerunfailures==15.1",
    "parameterized==0.9.0",
    "pyyaml==6.0.2",
    "numpy",
    "scipy",
    "ruff==0.15.21",
    "pyrefly>=1.1.1",
    "hypothesis>=6.156.6",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.ruff]
line-length = 120
target-version = "py310"
# spec/ is a standalone design-record script kept frozen as-is (commit.md #4).
extend-exclude = ["spec"]

[tool.ruff.lint]
# Ports the previous .flake8 rule surface (select = B,C,E,F,W,T4,B9) as it was
# actually enforced: this repo never installed flake8-bugbear/flake8-2020, so
# the B/C/T4/B9 codes in that select line were inert (no plugin providing
# them) and only E/F/W ever fired. `I` (isort) is added to replace the
# standalone isort tool.
select = ["E", "F", "W", "I"]
ignore = [
    "E203",  # whitespace before ':' — conflicts with Black/ruff-format slicing style
    "E266",  # multiple leading '#' in block comment — stylistic, previously ignored
    "E501",  # line too long — superseded by line-length + ruff format wrapping
    # W503 (line break before binary operator) has no ruff equivalent: ruff's
    # pycodestyle port never implemented it, and it contradicts Black/ruff-format
    # style (which breaks *before* the operator) — nothing to ignore, kept as a note.
    "F403",  # `from module import *` — used intentionally in a couple of __init__ re-exports
    "F401",  # unused import — same re-export use case
    "E731",  # lambda assigned to a variable — used in a few call sites
    "E402",  # module level import not at top of file — a couple of conditional-import spots
]

[tool.ruff.lint.isort]
known-first-party = ["torchsparsegradutils"]

[tool.ruff.format]
# Defaults already match Black's output (quote/indent/line-ending style); kept
# explicit for clarity and to pin behavior against future ruff defaults changing.
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.pyrefly]
project-includes = ["torchsparsegradutils/"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-v"]
testpaths = [
    "tests",
]
pythonpath = [
    "tests",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ELLIPSIS"
]
# Separate command for doctests due to potential issues
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
