[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchsparsegradutils"
version = "0.2.4"
description = "A collection of utility functions to work with PyTorch sparse tensors"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "CAI4CAI research group", email = "contact@cai4cai.uk"}
]
keywords = ["sparse", "torch", "utility"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch>=2.5",
    "scipy",
    "packaging",
]

[project.optional-dependencies]
cupy = ["cupy-cuda12x>=13.0"]
jax = ["jax[cuda12]"]
all = ["cupy-cuda12x>=13.0", "jax[cuda12]"]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-copybutton>=0.5.0",
    "myst-parser>=2.0.0",
    "sphinx-autobuild>=2021.3.14",
    "matplotlib>=3.5.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "sphinxcontrib-bibtex>=2.5.0",
    "sphinx-gallery>=0.13.0",
]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/cai4cai/torchsparsegradutils"
Documentation = "https://torchsparsegradutils.readthedocs.io"
Repository = "https://github.com/cai4cai/torchsparsegradutils"
Issues = "https://github.com/cai4cai/torchsparsegradutils/issues"
Changelog = "https://github.com/cai4cai/torchsparsegradutils/releases"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
(
  /(
    # exclude a few common directories in the root of the project
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.pytype
    | _build
    | buck-out
    | build
    | dist
  )/
  # also separately exclude other files if needed
  #| some_file
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
known_first_party = ["torchsparsegradutils"]
force_grid_wrap = 0
combine_as_imports = true
include_trailing_comma = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-v"]
testpaths = [
    "torchsparsegradutils/tests",
]
pythonpath = [
    "torchsparsegradutils/tests",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ELLIPSIS"
]
# Separate command for doctests due to potential issues
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
